--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> -->
     <link href="https://fonts.googleapis.com/css?family=League Spartan" rel="stylesheet" />
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <script src="./calc.js" defer></script>
+    <script  src="./index.js" defer></script>
     <title>Calculator</title></head>
 
 <body id="body" class="bg-[#3A4764]">
